--- a/website/Public/files_display.html
+++ b/website/Public/files_display.html
@@ -5,49 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Files Display</title>
     <style>
+        .file-type-list {
+            margin-top: 20px;
+        }
+        .file-type-item {
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
         .file-list {
             margin-top: 20px;
         }
         .file-item {
             margin-bottom: 10px;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-    <h1>Available Files</h1>
+    <h1>Select File Type</h1>
+    <div class="file-type-list">
+        <button class="file-type-item" onclick="('audio')">Audio Files</button><br>
+        <button class="file-type-item" onclick="('video')">Video Files</button><br>
+        <button class="file-type-item" onclick="('text')">Text Files</button><br>
+        <button class="file-type-item" onclick="('images')">Image Files</button>
+    </div>
+
+    <h2>Available Files</h2>
     <div id="files-container" class="file-list"></div>
 
-    <script>
-        // Fetch files from the backend
-        async function fetchFiles(type) {
-            const response = await fetch(`/list-files?type=${type}`);
-            const data = await response.json();
-            if (data.success) {
-                displayFiles(data.files);
-            } else {
-                alert('Error fetching files');
-            }
-        }
-
-        // Display files with download links
-        function displayFiles(files) {
-            const container = document.getElementById('files-container');
-            container.innerHTML = '';
-
-            files.forEach(file => {
-                const fileItem = document.createElement('div');
-                fileItem.className = 'file-item';
-                fileItem.innerHTML = `
-                    <span>${file.name}</span> 
-                    <a href="${file.downloadLink}" download>Download</a>
-                `;
-                container.appendChild(fileItem);
-            });
-        }
-
-        // On page load, fetch and display files
-        fetchFiles('audio'); // You can change this to 'video', 'text', etc.
-    </script>
-    ><script src="../scripts/files_display.js"></script>
+    <script src="../scripts/files_display.js"></script>
 </body>
 </html>
