--- a/website/Public/register.html
+++ b/website/Public/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form action="/register" method="POST">
+    <form action="/auth/register" method="POST">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
